# kerning-validator

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
src/kerning_validator/: __init__.py  __main__.py  language_tags.py
